# connections-api

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml  test_db.py
docker/: dev.Dockerfile
migrations/: env.py
migrations/versions/: 4122d2c40a83_initial.py  4def4ecddcc7_add_connections_tables.py
src/connection_api/: main.py
src/connection_api/api/v1/: api.py
src/connection_api/core/: config.py
src/connection_api/db/: base.py  models.py
